--- a/config/compilation/release_kmb_with_CM_Conv.json
+++ b/config/compilation/release_kmb_with_CM_Conv.json
@@ -230,6 +230,7 @@
             "ConvertOpsToTasks",
             "AdaptFixedPointCompute",
             "SetUpPPETasks",
+            "TaskMultiplePostOps",
             "ForceSerialize",
             "KMBOrderConversion",
             "AlignUnpopulatedTensors",
