--- a/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv.json
+++ b/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv.json
@@ -325,6 +325,7 @@
               "ddr_control_edges" : true
             },
             "TransitiveReduction",
+            "LayerNumbering",
             "PopulateWeightsTablesPointers",
             "PopulateStorageElementPointers",
             "PopulateInstructionListTables"
