--- a/config/compilation/release_kmb.json
+++ b/config/compilation/release_kmb.json
@@ -310,6 +310,7 @@
               "ddr_control_edges" : true
             },
             "TransitiveReduction",
+            "LayerNumbering",
             "PopulateWeightsTablesPointers",
             "PopulateStorageElementPointers",
             "PopulateInstructionListTables"
