--- a/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv.json
@@ -136,6 +136,8 @@
             "PostTrainingQuantize",
             "EltwiseToSWEltwise",
             "MarkEltWiseUpaInputs",
+            "MarkCMCompatibleConvs",
+            "AddPermuteToNonCMConvPaths",
             {
                 "name" : "GraphParameterOptimization",
                 "graphOptimizerConfig" : {
