--- a/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv_hde.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv_hde.json
@@ -119,6 +119,8 @@
             "PostTrainingQuantize",
             "EltwiseToSWEltwise",
             "MarkEltWiseUpaInputs",
+            "MarkCMCompatibleConvs",
+            "AddPermuteToNonCMConvPaths",
             {
                 "name" : "GraphParameterOptimization",
                 "graphOptimizerConfig" : {
