--- a/config/compilation/release_kmb-sparse_with_CM_Conv.json
+++ b/config/compilation/release_kmb-sparse_with_CM_Conv.json
@@ -268,12 +268,7 @@
     "control_flows":{
         "Singular" : [
             "TaskControlFlows",
-            "TransitiveReduction",
-            "LayerNumbering",
-            "TransitiveReduction",
-            "LayerNumbering",
-            "NNCMX2DDRControlFlows",
-            "TransitiveReduction"
+            "NNCMX2DDRControlFlows"
         ]
     },
     "finalize": {
@@ -304,7 +299,6 @@
                 "name": "TransitiveReduction",
                 "filter": "MemoryRequirement"
             },
-            "TransitiveReduction",
             {
                 "name": "GenerateDot",
                 "output": "output/dots/scheduler_control_model.dot",
@@ -312,7 +306,6 @@
                 "content": "full",
                 "html": true
             },
-            "LayerNumbering",
             {
                 "name": "GenerateWorkloads",
                 "costfunction": "greedy",
@@ -330,7 +323,6 @@
               "allocator_mode": true,
               "ddr_control_edges" : true
             },
-            "TransitiveReduction",
             "PopulateWeightsTablesPointers",
             "PopulateStorageElementPointers",
             "PopulateInstructionListTables"
