--- a/config/compilation/release_kmb_B0.json
+++ b/config/compilation/release_kmb_B0.json
@@ -267,13 +267,7 @@
     "control_flows":{
         "Singular" : [
             "TaskControlFlows",
-            "TransitiveReduction",
-            "LayerNumbering",
-            "TransitiveReduction",
-            "LayerNumbering",
-            "NNCMX2DDRControlFlows",
-            "TransitiveReduction"
-        ]
+            "NNCMX2DDRControlFlows"        ]
     },
     "finalize": {
         "Singular": [
@@ -288,8 +282,6 @@
                 "name": "TransitiveReduction",
                 "filter": "MemoryRequirement"
             },
-            "TransitiveReduction",
-            "LayerNumbering",
             {
                 "name": "GenerateWorkloads",
                 "costfunction": "greedy",
@@ -307,7 +299,6 @@
               "allocator_mode": true,
               "ddr_control_edges" : true
             },
-            "TransitiveReduction",
             "PopulateWeightsTablesPointers",
             "PopulateStorageElementPointers",
             "PopulateInstructionListTables"
